# mtrs

./: .gitignore  .travis.yml  Cargo.toml  README.md  codecov.yml
.github/workflows/: rust.yml
benches/: primary.rs
src/: impls.rs  lib.rs  macros.rs  math.rs  matrix.rs  size.rs
src/impls/: basic.rs  math.rs  mod.rs
tests/: primary.rs
