[package]
name = "mtrs"
version = "0.1.2"
authors = ["ZippyMagician <zippymagician1@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "A implementation of matrices in Rust"
repository = "https://github.com/ZippyMagician/mtrs.git"

keywords = ["math", "matrix"]

license = "Apache-2.0"

exclude = ["/tests/**"]

[badges]
codecov = { repository = "ZippyMagician/mtrs", branch = "master", service = "github" }
travis-ci = { repository = "ZippyMagician/mtrs", branch = "master" }

[dependencies]
num-traits = "0.2"