[package]
name = "mtrs"
version = "0.1.3"
authors = ["ZippyMagician <zippymagician1@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "A implementation of matrices in Rust"
repository = "https://github.com/ZippyMagician/mtrs.git"

keywords = ["math", "matrix"]

license = "Apache-2.0"

exclude = ["/tests/**", "/benches/**"]

[badges]
codecov = { repository = "ZippyMagician/mtrs", branch = "master", service = "github" }
travis-ci = { repository = "ZippyMagician/mtrs", branch = "master" }

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "primary"
harness = false